add second draft of HTML

--- a/index.html
+++ b/index.html
@@ -2,22 +2,35 @@
 <html>
 <head>
  <title>Colmar Academy</title>
+ <link rel="stylesheet" href="./resources/css/reset.css">
+ <link href="resources\css\style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <header>
     <div class="logo">
+      <h1>COLMARACADEMY</h1>
     </div>
     <nav>
+      <ul>
+        <li><a>On campus</a></li>
+        <li><a>Online</a></li>
+        <li><a>For companies</a></li>
+        <li><a>Sign in</a></li>
+      </ul>
     <nav>
   </header>
   <div class="intro">
     <div class="learn">
       <div class="learnpic">
+        <img class="resources\images\banner.jpg" />
       </div>
       <div class="learnright">
         <div class="learntxt">
+          <h2>Learn something new everyday</h2>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         </div>
         <div class="learnbutton">
+          <h6>Start here</h6>
         </div>
       </div>
     </div>
@@ -25,25 +38,35 @@
   <div class="info">
     <div class="practice">
       <div class="practicepic">
+        <img src="resources\images\information-main.jpg" />
       </div>
       <div class="practicetxt">
+        <h2>It doesn't hurt to keep practicing</h2>
+        <h4>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+        commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus
+        sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+        tristique ligula."</h4>
+        <h5>Emanuel, Sr Strategist at Hiring.com</h5>
       </div>
     </div>
     <div class="inforight">
       <div class="orientation">
         <div class="orientpic">
+          <img src="resources\images\information-orientation.jpg" />
         </div>
         <div class="orientxt">
         </div>
       </div>
       <div class="campus">
         <div class="campuspic">
+          <img src="resources\images\information-campus.jpg" />
         </div>
         <div class="campustxt">
         </div>
       </div>
       <div class="guest">
         <div class="guestpic">
+          <img src="resources\images\information-guest-lecture.jpg" />
         </div>
         <div class="guestxt">
         </div>
@@ -52,40 +75,54 @@
   </div>
   <div class="learning">
     <div class="start">
+      <h2>Start learning</h2>
     </div>
     <div class="main">
       <div class="softeng">
         <div class="sepic">
+          <img src="resources\images\course-software.jpg" />
         </div>
         <div class="setxt">
+          <h3>Software engineering></h3>
+          <h4>COURSES</h4>
+          <h4>Web Development, Mobile Development, iOT, APIs</h4>
         </div>
       </div>
       <div class="compart">
         <div class="capic">
+          <img src="resources\images\course-computer-art.jpg" />
         </div>
         <div class="catxt">
+          <h3>Computer art></h3>
+          <h4>COURSES</h4>
+          <h4>Imaging & Design, Web Design, Motion Graphics & Visual Effects
+          Computer Animation</h4> **LAST
         </div>
       </div>
       <div class="design">
         <div class="designpic">
+          <img src="resources\images\course-design.jpg" />
         </div>
         <div class="designtxt">
         </div>
       </div>
       <div class="data">
         <div class="datapic">
+          <img src="resources\images\course-data.jpg" />
         </div>
         <div class="datatxt">
         </div>
       </div>
       <div class="biz">
         <div class="bizpic">
+          <img src="resources\images\course-business.jpg" />
         </div>
         <div class="biztxt">
         </div>
       </div>
       <div class="mrktng">
         <div class="mrktngpic">
+          <img src="resources\images\course-marketing.jpg" />
         </div>
         <div class="mrktngtxt">
         </div>
@@ -103,12 +140,14 @@
       <div class="exhibitb">
         <div class="fisma">
           <div class="fismapic">
+            <img src="resources\images\thesis-fisma.jpg" />
           </div>
           <div class="fismatxt">
           </div>
         </div>
         <div class="nowthen">
           <div class="ntpic">
+            <img src="resources\images\thesis-now-and-then.jpg" />
           </div>
           <div class="ntxt">
           </div>
