add third draft of HTML

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <img src="resources\images\information-orientation.jpg" />
         </div>
         <div class="orientxt">
+          <h3>Orientation date</h3>
+          <h4>Tue 10/11 & Wed 10/12: 8am-3pm</h4>
+          <h4>Read more</h4>
         </div>
       </div>
       <div class="campus">
@@ -62,6 +65,9 @@
           <img src="resources\images\information-campus.jpg" />
         </div>
         <div class="campustxt">
+          <h3>Orientation date<h3>
+          <h4>Find which campus is close by you</h4>
+          <h4>Read more</h4>
         </div>
       </div>
       <div class="guest">
@@ -69,6 +75,10 @@
           <img src="resources\images\information-guest-lecture.jpg" />
         </div>
         <div class="guestxt">
+          <h3>Our guest lecture</h3>
+          <h4>Join a keynote with Oliver Sack about music in medication
+          treatment</h4>
+          <h4>Read more</h4>
         </div>
       </div>
     </div>
@@ -96,7 +106,7 @@
           <h3>Computer art></h3>
           <h4>COURSES</h4>
           <h4>Imaging & Design, Web Design, Motion Graphics & Visual Effects
-          Computer Animation</h4> **LAST
+          Computer Animation</h4>
         </div>
       </div>
       <div class="design">
@@ -104,6 +114,9 @@
           <img src="resources\images\course-design.jpg" />
         </div>
         <div class="designtxt">
+          <h3>Design</h3>
+          <h4>COURSES</h4>
+          <h4>User Experience Design, User Research, Visual Design</h4>
         </div>
       </div>
       <div class="data">
@@ -111,6 +124,9 @@
           <img src="resources\images\course-data.jpg" />
         </div>
         <div class="datatxt">
+          <h3>Data</h3>
+          <h4>COURSES</h4>
+          <h4>Data Science, Big Data, SQL, Data Visualization</h4>
         </div>
       </div>
       <div class="biz">
@@ -118,6 +134,9 @@
           <img src="resources\images\course-business.jpg" />
         </div>
         <div class="biztxt">
+          <h3>Business<h3>
+          <h4>COURSES</h4>
+          <h4>Product Development, Business Development, Startup</h4>
         </div>
       </div>
       <div class="mrktng">
@@ -125,16 +144,29 @@
           <img src="resources\images\course-marketing.jpg" />
         </div>
         <div class="mrktngtxt">
+          <h3>Marketing</h3>
+          <h4>COURSES</h4>
+          <h4>Analytics, Content Marketing; Mobile Marketing</h4>
         </div>
       </div>
     </div>
   </div>
   <div class="thesis">
+    <h2>Thesis exhibit</h2>
     <div class="exhibit">
       <div class="exhibita">
         <div class="exhibitavid">
+          <video width="320" height="240" controls>
+            <source src="resources\videos\videos\thesis.mp4">
+            Your browser does not support the video tag
+          </video>
         </div>
         <div class="exhibitatxt">
+          <h3>Reimagine urban</h3>
+          <h4>"Curabitur vitae libero in ipsum porttitor consequat Aliquam et
+          commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus
+          sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+          tristique ligula."
         </div>
       </div>
       <div class="exhibitb">
@@ -143,6 +175,8 @@
             <img src="resources\images\thesis-fisma.jpg" />
           </div>
           <div class="fismatxt">
+            <h3>Fisma: Design and Prototype</h3>
+            <h4>Designer showcase of new prototype product</h4>
           </div>
         </div>
         <div class="nowthen">
@@ -150,6 +184,8 @@
             <img src="resources\images\thesis-now-and-then.jpg" />
           </div>
           <div class="ntxt">
+            <h3>Now and then</h3>
+            <h4>Research study about New York</h4>
           </div>
         </div>
       </div>
@@ -159,6 +195,9 @@
   </div>
   <footer>
     <div class="footer">
+      <h5>&copy 2016 Colmar Academy. All rights reserved</h5>
+      <h5>Terms</h5>
+      <h5>Privacy</h5>
     </div>
   </footer>
 </body>
