add fourth draft of HTML

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
   <div class="info">
     <div class="practice">
-      <div class="practicepic">
+      <div class="learnpic">
         <img src="resources\images\information-main.jpg" />
       </div>
       <div class="practicetxt">
@@ -50,28 +50,28 @@
       </div>
     </div>
     <div class="inforight">
-      <div class="orientation">
-        <div class="orientpic">
+      <div class="infoitem">
+        <div class="infopic">
           <img src="resources\images\information-orientation.jpg" />
         </div>
-        <div class="orientxt">
+        <div class="infotxt">
           <h3>Orientation date</h3>
           <h4>Tue 10/11 & Wed 10/12: 8am-3pm</h4>
           <h4>Read more</h4>
         </div>
       </div>
-      <div class="campus">
-        <div class="campuspic">
+      <div class="infoitem">
+        <div class="infopic">
           <img src="resources\images\information-campus.jpg" />
         </div>
-        <div class="campustxt">
+        <div class="infotxt">
           <h3>Orientation date<h3>
           <h4>Find which campus is close by you</h4>
           <h4>Read more</h4>
         </div>
       </div>
       <div class="guest">
-        <div class="guestpic">
+        <div class="infopic">
           <img src="resources\images\information-guest-lecture.jpg" />
         </div>
         <div class="guestxt">
@@ -88,62 +88,62 @@
       <h2>Start learning</h2>
     </div>
     <div class="main">
-      <div class="softeng">
-        <div class="sepic">
+      <div class="mainitem">
+        <div class="mainpic">
           <img src="resources\images\course-software.jpg" />
         </div>
-        <div class="setxt">
+        <div class="maintxt">
           <h3>Software engineering></h3>
           <h4>COURSES</h4>
           <h4>Web Development, Mobile Development, iOT, APIs</h4>
         </div>
       </div>
-      <div class="compart">
-        <div class="capic">
+      <div class="mainitem">
+        <div class="mainpic">
           <img src="resources\images\course-computer-art.jpg" />
         </div>
-        <div class="catxt">
+        <div class="maintxt">
           <h3>Computer art></h3>
           <h4>COURSES</h4>
           <h4>Imaging & Design, Web Design, Motion Graphics & Visual Effects
           Computer Animation</h4>
         </div>
       </div>
-      <div class="design">
-        <div class="designpic">
+      <div class="mainitem">
+        <div class="mainpic">
           <img src="resources\images\course-design.jpg" />
         </div>
-        <div class="designtxt">
+        <div class="maintxt">
           <h3>Design</h3>
           <h4>COURSES</h4>
           <h4>User Experience Design, User Research, Visual Design</h4>
         </div>
       </div>
-      <div class="data">
-        <div class="datapic">
+      <div class="mainitem">
+        <div class="mainpic">
           <img src="resources\images\course-data.jpg" />
         </div>
-        <div class="datatxt">
+        <div class="maintxt">
           <h3>Data</h3>
           <h4>COURSES</h4>
           <h4>Data Science, Big Data, SQL, Data Visualization</h4>
         </div>
       </div>
-      <div class="biz">
-        <div class="bizpic">
+      <div class="mainitem">
+        <div class="mainpic">
           <img src="resources\images\course-business.jpg" />
         </div>
-        <div class="biztxt">
+        <div class="maintxt">
           <h3>Business<h3>
           <h4>COURSES</h4>
           <h4>Product Development, Business Development, Startup</h4>
         </div>
       </div>
-      <div class="mrktng">
-        <div class="mrktngpic">
+      <div class="mainitem">
+        <div class="mainpic">
           <img src="resources\images\course-marketing.jpg" />
         </div>
-        <div class="mrktngtxt">
+        <div class="maintxt">
           <h3>Marketing</h3>
           <h4>COURSES</h4>
           <h4>Analytics, Content Marketing; Mobile Marketing</h4>
@@ -171,7 +171,7 @@
       </div>
       <div class="exhibitb">
         <div class="fisma">
-          <div class="fismapic">
+          <div class="exhibitbpic">
             <img src="resources\images\thesis-fisma.jpg" />
           </div>
           <div class="fismatxt">
@@ -180,7 +180,7 @@
           </div>
         </div>
         <div class="nowthen">
-          <div class="ntpic">
+          <div class="exhibitbpic">
             <img src="resources\images\thesis-now-and-then.jpg" />
           </div>
           <div class="ntxt">
