--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 <body>
   <header>
     <div class="logo">
-      <h1>COLMARACADEMY</h1>
-    </div>
+        <img src="resources\images\ic-logo.svg" />
+        <h1><span id="darkgrey">COLMAR</span><span id="silver">ACADEMY</h1>
     <nav>
       <ul>
-        <li><a>On campus</a></li>
-        <li><a>Online</a></li>
-        <li><a>For companies</a></li>
-        <li><a>Sign in</a></li>
+        <li><a href="#">On campus</a></li>
+        <li><a href="#">Online</a></li>
+        <li><a href="#">For companies</a></li>
+        <li><a href="#">Sign in</a></li>
       </ul>
-    <nav>
+    </nav>
   </header>
   <div class="intro">
     <div class="learn">
       <div class="learnpic">
-        <img class="resources\images\banner.jpg" />
+        <img src="resources\images\banner.jpg" />
       </div>
       <div class="learnright">
         <div class="learntxt">
