--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <div class="logo">
         <img src="resources\images\ic-logo.svg" />
         <h1><span id="darkgrey">COLMAR</span><span id="silver">ACADEMY</h1>
-    <nav>
-      <ul>
-        <li><a href="#">On campus</a></li>
-        <li><a href="#">Online</a></li>
-        <li><a href="#">For companies</a></li>
-        <li><a href="#">Sign in</a></li>
-      </ul>
-    </nav>
+        <nav>
+          <ul>
+            <li><a href="#">On campus</a></li>
+            <li><a href="#">Online</a></li>
+            <li><a href="#">For companies</a></li>
+            <li><a href="#">Sign in</a></li>
+          </ul>
+        </nav>
+    </div>      
   </header>
   <div class="intro">
     <div class="learn">
