add seventh draft of HTML

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#">Sign in</a></li>
           </ul>
         </nav>
-    </div>      
+    </div>
   </header>
   <div class="intro">
     <div class="learn">
@@ -26,29 +26,24 @@
         <img src="resources\images\banner.jpg" />
       </div>
       <div class="learnright">
-        <div class="learntxt">
-          <h2>Learn something new everyday</h2>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-        </div>
-        <div class="learnbutton">
-          <h6>Start here</h6>
-        </div>
+        <h2>Learn something new everyday</h2>
+        <h3>Lorem ipsum dolor sit amet,<br /> consectetur adipiscing elit.</h3>
+          <div class="learnbutton">
+            <h6 <a href="#">Start here</a></h6>
+          </div>
       </div>
     </div>
   </div>
   <div class="info">
     <div class="practice">
-      <div class="learnpic">
+      <div class="practicepic">
         <img src="resources\images\information-main.jpg" />
-      </div>
-      <div class="practicetxt">
         <h2>It doesn't hurt to keep practicing</h2>
         <h4>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
-        commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus
-        sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+        commodo lectus,<br /> nec consequat neque. Sed non accumsan urna. Phasellus
+        sed consequat ex. Etiam <br /> eget magna laoreet, efficitur dolor consequat,
         tristique ligula."</h4>
         <h5>Emanuel, Sr Strategist at Hiring.com</h5>
-      </div>
     </div>
     <div class="inforight">
       <div class="infoitem">
