add eigth draft of HTML

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Learn something new everyday</h2>
         <h3>Lorem ipsum dolor sit amet,<br /> consectetur adipiscing elit.</h3>
           <div class="learnbutton">
-            <h6 <a href="#">Start here</a></h6>
+            <a href="#">Start here</a>
           </div>
       </div>
     </div>
@@ -115,6 +115,8 @@
           <h4>User Experience Design, User Research, Visual Design</h4>
         </div>
       </div>
+    </div>
+    <div class="main">
       <div class="mainitem">
         <div class="mainpic">
           <img src="resources\images\course-data.jpg" />
