add tenth draft of HTML

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="resources\images\banner.jpg" />
       </div>
       <div class="learnright">
-        <h2>Learn something new everyday</h2>
+        <h2>Learn something<br /> new everyday</h2>
         <h3>Lorem ipsum dolor sit amet,<br /> consectetur adipiscing elit.</h3>
           <div class="learnbutton">
             <a href="#">Start here</a>
