--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="infotxt">
           <h3>Orientation date</h3>
           <h4>Tue 10/11 & Wed 10/12: 8am-3pm</h4>
-          <h4>Read more</h4>
+          <span><a>Read more</a></span>
         </div>
       </div>
       <div class="infoitem">
