--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           <img src="resources\images\information-campus.jpg" />
         </div>
         <div class="infotxt">
-          <h3>Orientation date<h3>
+          <h3>Our campus<h3>
           <h4>Find which campus is close by you</h4>
-          <h4>Read more</h4>
+          <span><a>Read more</a></span>
         </div>
       </div>
       <div class="guest">
