--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <h3>Our guest lecture</h3>
           <h4>Join a keynote with Oliver Sack about music in medication
           treatment</h4>
-          <h4>Read more</h4>
+          <span><a>Read more</a></span>
         </div>
       </div>
     </div>
