add fourteenth draft of HTML

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <img src="resources\images\course-software.jpg" />
         </div>
         <div class="maintxt">
-          <h3>Software engineering></h3>
+          <h3>Software engineering</h3>
           <h4>COURSES</h4>
           <h4>Web Development, Mobile Development, iOT, APIs</h4>
         </div>
@@ -99,7 +99,7 @@
           <img src="resources\images\course-computer-art.jpg" />
         </div>
         <div class="maintxt">
-          <h3>Computer art></h3>
+          <h3>Computer art</h3>
           <h4>COURSES</h4>
           <h4>Imaging & Design, Web Design, Motion Graphics & Visual Effects
           Computer Animation</h4>
@@ -144,7 +144,7 @@
         <div class="maintxt">
           <h3>Marketing</h3>
           <h4>COURSES</h4>
-          <h4>Analytics, Content Marketing; Mobile Marketing</h4>
+          <h4>Analytics, Content Marketing, <br/> Mobile Marketing</h4>
         </div>
       </div>
     </div>
