Add sixteenth draft of HTML.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="exhibit">
       <div class="exhibita">
         <div class="exhibitavid">
-          <video width="1100" height="1100" controls>
+          <video width="1100" height="600" controls>
             <source src="resources\videos\videos\thesis.mp4">
             Your browser does not support the video tag
           </video>
@@ -167,7 +167,7 @@
           </div>
           <div class="fismatxt">
             <h3>Fisma: Design and Prototype</h3>
-            <h4>Designer showcase of new prototype product</h4>
+            <h4>Designer showcase of new <br />prototype product</h4>
           </div>
         </div>
         <div class="nowthen">
