add 18th draft of HTML

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
             <li><a href="#">Sign in</a></li>
           </ul>
         </nav>
+        <nav class="mobile">
+          <ul>
+            <li><a href="#"><img src="resources\images\ic-logo.svg"></a></li>
+            <li><a href="#"><img src="resources\images\ic-on-campus.svg"></a></li>
+            <li><a href="#"><img src="resources\images\ic-online.svg"></a></li>
+            <li><a href="#"><img src="resources\images\ic-login.svg"></a></li>
+          </ul>
+        </nav>
     </div>
   </header>
   <div class="intro">
@@ -193,9 +201,11 @@
   </div>
   <footer>
     <div class="footer">
-      <h5>&copy 2016 Colmar Academy. All rights reserved</h5>
-      <h5>Terms</h5>
-      <h5>Privacy</h5>
+      <h5>&copy; 2016 Colmar Academy. All rights reserved</h5>
+      <span>
+        <h5>Terms</h5>
+        <h5>Privacy</h5>
+      </span>
     </div>
   </footer>
 </body>
