add 19th draft of HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <header>
     <div class="logo">
+      <div class="desktop">
         <img src="resources\images\ic-logo.svg" />
         <h1><span id="darkgrey">COLMAR</span><span id="silver">ACADEMY</h1>
         <nav>
@@ -18,14 +19,15 @@
             <li><a href="#">Sign in</a></li>
           </ul>
         </nav>
-        <nav class="mobile">
-          <ul>
-            <li><a href="#"><img src="resources\images\ic-logo.svg"></a></li>
-            <li><a href="#"><img src="resources\images\ic-on-campus.svg"></a></li>
-            <li><a href="#"><img src="resources\images\ic-online.svg"></a></li>
-            <li><a href="#"><img src="resources\images\ic-login.svg"></a></li>
-          </ul>
-        </nav>
+      </div>
+      <nav class="mobile">
+        <ul>
+          <li><a href="#"><img src="resources\images\ic-logo.svg"></a></li>
+          <li><a href="#"><img src="resources\images\ic-on-campus.svg"></a></li>
+          <li><a href="#"><img src="resources\images\ic-online.svg"></a></li>
+          <li><a href="#"><img src="resources\images\ic-login.svg"></a></li>
+        </ul>
+      </nav>
     </div>
   </header>
   <div class="intro">
