--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 <body>
   <header>
     <div class="logo">
-      <div class="desktop">
         <img src="resources\images\ic-logo.svg" />
         <h1><span id="darkgrey">COLMAR</span><span id="silver">ACADEMY</h1>
-        <nav>
+        <nav class="desktop">
           <ul>
             <li><a href="#">On campus</a></li>
             <li><a href="#">Online</a></li>
@@ -20,14 +19,15 @@
           </ul>
         </nav>
       </div>
-      <nav class="mobile">
-        <ul>
-          <li><a href="#"><img src="resources\images\ic-logo.svg"></a></li>
-          <li><a href="#"><img src="resources\images\ic-on-campus.svg"></a></li>
-          <li><a href="#"><img src="resources\images\ic-online.svg"></a></li>
-          <li><a href="#"><img src="resources\images\ic-login.svg"></a></li>
-        </ul>
-      </nav>
+      <div>
+        <nav class="mobile">
+           <ul>
+             <li><a href="#"><img src="resources\images\ic-logo.svg"></a></li>
+             <li><a href="#"><img src="resources\images\ic-on-campus.svg"></a></li>
+             <li><a href="#"><img src="resources\images\ic-online.svg"></a></li>
+             <li><a href="#"><img src="resources\images\ic-login.svg"></a></li>
+           </ul>
+         </nav>
     </div>
   </header>
   <div class="intro">
@@ -204,10 +204,8 @@
   <footer>
     <div class="footer">
       <h5>&copy; 2016 Colmar Academy. All rights reserved</h5>
-      <span>
-        <h5>Terms</h5>
-        <h5>Privacy</h5>
-      </span>
+      <h5>Terms</h5>
+      <h5>Privacy</h5>
     </div>
   </footer>
 </body>
