add 23rd draft of HTML

--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
     <div class="inforight">
       <div class="infoitem">
         <div class="infopic">
-          <img src="resources\images\information-orientation.jpg" />
+          <div class="desktop">
+            <img src="resources\images\information-orientation.jpg" />
+          </div>
+          <div class="mobile">
+            <img src=resources\images\information-orientation-mobile.jpg />
+          </div>
         </div>
         <div class="infotxt">
           <h3>Orientation date</h3>
@@ -68,7 +73,12 @@
       </div>
       <div class="infoitem">
         <div class="infopic">
-          <img src="resources\images\information-campus.jpg" />
+          <div class="desktop">
+            <img src="resources\images\information-campus.jpg" />
+          </div>
+          <div class="mobile">
+            <img src="resources\images\information-campus-mobile.jpg" />
+          </div>  
         </div>
         <div class="infotxt">
           <h3>Our campus<h3>
