add 24th draft of HTML

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <div class="mobile">
             <img src="resources\images\information-campus-mobile.jpg" />
-          </div>  
+          </div>
         </div>
         <div class="infotxt">
           <h3>Our campus<h3>
@@ -88,7 +88,12 @@
       </div>
       <div class="guest">
         <div class="infopic">
-          <img src="resources\images\information-guest-lecture.jpg" />
+          <div class="desktop">
+            <img src="resources\images\information-guest-lecture.jpg" />
+          </div>
+          <div class="mobile">
+            <img src="resources\images\information-guest-lecture-mobile.jpg" />
+          </div>
         </div>
         <div class="guestxt">
           <h3>Our guest lecture</h3>
