add 28th draft of HTML

--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
           </ul>
         </nav>
       </div>
-      <div>
-        <nav class="mobile">
-           <ul>
-             <li><a href="#"><img src="resources\images\ic-logo.svg"></a></li>
-             <li><a href="#"><img src="resources\images\ic-on-campus.svg"></a></li>
-             <li><a href="#"><img src="resources\images\ic-online.svg"></a></li>
-             <li><a href="#"><img src="resources\images\ic-login.svg"></a></li>
-           </ul>
-         </nav>
+      <nav class="mobile">
+        <ul>
+          <li><a href="#"><img src="resources\images\ic-logo.svg"></a></li>
+          <li><a href="#"><img src="resources\images\ic-on-campus.svg"></a></li>
+          <li><a href="#"><img src="resources\images\ic-online.svg"></a></li>
+          <li><a href="#"><img src="resources\images\ic-login.svg"></a></li>
+        </ul>
+      </nav>
     </div>
   </header>
   <div class="intro">
@@ -68,7 +67,7 @@
         <div class="infotxt">
           <h3>Orientation date</h3>
           <h4>Tue 10/11 & Wed 10/12: 8am-3pm</h4>
-          <span><a>Read more</a></span>
+          <span><a href="#">Read more</a></span>
         </div>
       </div>
       <div class="infoitem">
@@ -83,7 +82,7 @@
         <div class="infotxt">
           <h3>Our campus<h3>
           <h4>Find which campus is close by you</h4>
-          <span><a>Read more</a></span>
+          <span><a href="#">Read more</a></span>
         </div>
       </div>
       <div class="guest">
@@ -99,7 +98,7 @@
           <h3>Our guest lecture</h3>
           <h4>Join a keynote with Oliver Sack about music in medication
           treatment</h4>
-          <span><a>Read more</a></span>
+          <span><a href="#">Read more</a></span>
         </div>
       </div>
     </div>
@@ -179,7 +178,7 @@
     <div class="exhibit">
       <div class="exhibita">
         <div class="exhibitavid">
-          <video width="1100" height="1000" controls>
+          <video width="1110" height="1035" controls>
             <source src="resources\videos\videos\thesis.mp4">
             Your browser does not support the video tag
           </video>
@@ -219,8 +218,10 @@
   <footer>
     <div class="footer">
       <h5>&copy; 2016 Colmar Academy. All rights reserved</h5>
-      <h6>Terms</h6>
-      <h6>Privacy</h6>
+      <span>
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+      </span>
     </div>
   </footer>
 </body>
