update HTML with corrections

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <div class="logo">
         <img src="resources\images\ic-logo.svg" />
-        <h1><span id="darkgrey">COLMAR</span><span id="silver">ACADEMY</h1>
+        <h1><span id="darkgrey">COLMAR</span><span id="silver">ACADEMY</h1></span>
         <nav class="desktop">
           <ul>
             <li><a href="#">On campus</a></li>
@@ -27,7 +27,6 @@
           <li><a href="#"><img src="resources\images\ic-login.svg"></a></li>
         </ul>
       </nav>
-    </div>
   </header>
   <div class="intro">
     <div class="learn">
@@ -80,7 +79,7 @@
           </div>
         </div>
         <div class="infotxt">
-          <h3>Our campus<h3>
+          <h3>Our campus</h3>
           <h4>Find which campus is close by you</h4>
           <span><a href="#">Read more</a></span>
         </div>
@@ -156,7 +155,7 @@
           <img src="resources\images\course-business.jpg" />
         </div>
         <div class="maintxt">
-          <h3>Business<h3>
+          <h3>Business</h3>
           <h4>COURSES</h4>
           <h4>Product Development, Business Development, Startup</h4>
         </div>
@@ -213,7 +212,7 @@
     <h4>"Curabitur vitae libero in ipsum porttitor consequat Aliquam et
     commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus
     sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
-    tristique ligula."
+    tristique ligula."</h4>
   </div>
   <footer>
     <div class="footer">
