--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
  <link href="resources\css\style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+
+  <!--Header for Desktop-->
+
   <header>
     <div class="logo">
-        <img src="resources\images\ic-logo.svg" />
+        <img src="resources\images\ic-logo.svg" alt=""/>
         <h1><span id="darkgrey">COLMAR</span><span id="silver">ACADEMY</h1></span>
         <nav class="desktop">
           <ul>
@@ -19,19 +22,25 @@
           </ul>
         </nav>
       </div>
+
+      <!--Header for mobile-->
+
       <nav class="mobile">
         <ul>
-          <li><a href="#"><img src="resources\images\ic-logo.svg"></a></li>
-          <li><a href="#"><img src="resources\images\ic-on-campus.svg"></a></li>
-          <li><a href="#"><img src="resources\images\ic-online.svg"></a></li>
-          <li><a href="#"><img src="resources\images\ic-login.svg"></a></li>
+          <li><a href="#"><img src="resources\images\ic-logo.svg" alt=""></a></li>
+          <li><a href="#"><img src="resources\images\ic-on-campus.svg" alt=""></a></li>
+          <li><a href="#"><img src="resources\images\ic-online.svg" alt=""></a></li>
+          <li><a href="#"><img src="resources\images\ic-login.svg" alt=""></a></li>
         </ul>
       </nav>
   </header>
+
+  <!--Introduction-->
+
   <div class="intro">
     <div class="learn">
       <div class="learnpic">
-        <img src="resources\images\banner.jpg" />
+        <img src="resources\images\banner.jpg" alt=""/>
       </div>
       <div class="learnright">
         <h2>Learn something<br /> new everyday</h2>
@@ -42,10 +51,13 @@
       </div>
     </div>
   </div>
+
+  <!--Information-->
+
   <div class="info">
     <div class="practice">
       <div class="practicepic">
-        <img src="resources\images\information-main.jpg" />
+        <img src="resources\images\information-main.jpg" alt=""/>
         <h2>It doesn't hurt to keep practicing</h2>
         <h4>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
         commodo lectus,<br /> nec consequat neque. Sed non accumsan urna. Phasellus
@@ -57,10 +69,10 @@
       <div class="infoitem">
         <div class="infopic">
           <div class="desktop">
-            <img src="resources\images\information-orientation.jpg" />
+            <img src="resources\images\information-orientation.jpg" alt=""/>
           </div>
           <div class="mobile">
-            <img src=resources\images\information-orientation-mobile.jpg />
+            <img src=resources\images\information-orientation-mobile.jpg alt=""/>
           </div>
         </div>
         <div class="infotxt">
@@ -72,10 +84,10 @@
       <div class="infoitem">
         <div class="infopic">
           <div class="desktop">
-            <img src="resources\images\information-campus.jpg" />
+            <img src="resources\images\information-campus.jpg" alt=""/>
           </div>
           <div class="mobile">
-            <img src="resources\images\information-campus-mobile.jpg" />
+            <img src="resources\images\information-campus-mobile.jpg" alt=""/>
           </div>
         </div>
         <div class="infotxt">
@@ -87,10 +99,10 @@
       <div class="guest">
         <div class="infopic">
           <div class="desktop">
-            <img src="resources\images\information-guest-lecture.jpg" />
+            <img src="resources\images\information-guest-lecture.jpg" alt=""/>
           </div>
           <div class="mobile">
-            <img src="resources\images\information-guest-lecture-mobile.jpg" />
+            <img src="resources\images\information-guest-lecture-mobile.jpg" alt=""/>
           </div>
         </div>
         <div class="guestxt">
@@ -102,6 +114,9 @@
       </div>
     </div>
   </div>
+
+  <!--Curriculum-->
+
   <div class="learning">
     <div class="start">
       <h2>Start learning</h2>
@@ -109,7 +124,7 @@
     <div class="main">
       <div class="mainitem">
         <div class="mainpic">
-          <img src="resources\images\course-software.jpg" />
+          <img src="resources\images\course-software.jpg" alt=""/>
         </div>
         <div class="maintxt">
           <h3>Software engineering</h3>
@@ -119,7 +134,7 @@
       </div>
       <div class="mainitem">
         <div class="mainpic">
-          <img src="resources\images\course-computer-art.jpg" />
+          <img src="resources\images\course-computer-art.jpg" alt=""/>
         </div>
         <div class="maintxt">
           <h3>Computer art</h3>
@@ -130,7 +145,7 @@
       </div>
       <div class="mainitem">
         <div class="mainpic">
-          <img src="resources\images\course-design.jpg" />
+          <img src="resources\images\course-design.jpg" alt=""/>
         </div>
         <div class="maintxt">
           <h3>Design</h3>
@@ -142,7 +157,7 @@
     <div class="main">
       <div class="mainitem">
         <div class="mainpic">
-          <img src="resources\images\course-data.jpg" />
+          <img src="resources\images\course-data.jpg" alt=""/>
         </div>
         <div class="maintxt">
           <h3>Data</h3>
@@ -152,7 +167,7 @@
       </div>
       <div class="mainitem">
         <div class="mainpic">
-          <img src="resources\images\course-business.jpg" />
+          <img src="resources\images\course-business.jpg" alt=""/>
         </div>
         <div class="maintxt">
           <h3>Business</h3>
@@ -162,7 +177,7 @@
       </div>
       <div class="mainitem">
         <div class="mainpic">
-          <img src="resources\images\course-marketing.jpg" />
+          <img src="resources\images\course-marketing.jpg" alt=""/>
         </div>
         <div class="maintxt">
           <h3>Marketing</h3>
@@ -172,6 +187,9 @@
       </div>
     </div>
   </div>
+
+  <!--Thesis-->
+
   <div class="thesis">
     <h2>Thesis exhibit</h2>
     <div class="exhibit">
@@ -186,7 +204,7 @@
       <div class="exhibitb">
         <div class="fisma">
           <div class="exhibitbpic">
-            <img src="resources\images\thesis-fisma.jpg" />
+            <img src="resources\images\thesis-fisma.jpg" alt=""/>
           </div>
           <div class="fismatxt">
             <h3>Fisma: Design and Prototype</h3>
@@ -195,7 +213,7 @@
         </div>
         <div class="nowthen">
           <div class="exhibitbpic">
-            <img src="resources\images\thesis-now-and-then.jpg" />
+            <img src="resources\images\thesis-now-and-then.jpg" alt=""/>
           </div>
           <div class="ntxt">
             <h3>Now and then</h3>
@@ -214,6 +232,9 @@
     sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
     tristique ligula."</h4>
   </div>
+
+  <!--Footer-->
+
   <footer>
     <div class="footer">
       <h5>&copy; 2016 Colmar Academy. All rights reserved</h5>
